--- a/software.html
+++ b/software.html
@@ -39,6 +39,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://roar-for-good.workable.com/j/38D1B16131'>ROAR for Good - Jobs: Senior Software Engineer - Apply online</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-07-25</p>
+<hr/>
 <h5><a href='https://jobs.smartrecruiters.com/Flywire1/743999692300915-senior-software-engineer'>Flywire Senior Software Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
@@ -105,11 +109,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://garmin-cluj.workable.com/j/D1370FEBE7'>Garmin Cluj - Jobs: C Software Engineer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://garmin-cluj.workable.com/j/D1370FEBE7'>Garmin Cluj - Jobs: C Software Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/abstract/jobs/4369827002'>Job Application for Senior Software Engineer, Desktop-Core Experience Squad at Abstract</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/abstract/jobs/4369827002'>Job Application for Senior Software Engineer, Desktop-Core Experience Squad at Abstract</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -125,7 +129,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://kiperformance.join.com/jobs/267342-mobile-software-engineer-ios-m-w-d'>Job @ KI Group (Cologne): Mobile Software Engineer... | JOIN</a></h5> 
+<h5><a href='https://kiperformance.join.com/jobs/267342-mobile-software-engineer-ios-m-w-d'>Job @ KI Group (Cologne): Mobile Software Engineer... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -169,11 +173,22 @@
 <p><span class="badge badge-light">Bellevue, WA</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/ascend.io/b53af43e-8865-4ff2-b00d-b8fcc6ea835a'>Ascend.io - Backend Software Engineer</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>6 days ago ... Architect: you're passionate about architecture and designing for scale. You were 
+doing HA back in high school, and micro-service architectures in college.</p>
+<hr/>
+<h5><a href='https://jobs.lever.co/restaurant365/4d89f80f-a52c-4156-8f0a-40a16ac38a5e'>Restaurant365 - Software Engineer</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Jul 16, 2019 ... Creates clean, efficient code with minimal defects to meets customer 
+requirements; Participates in design discussions with the software architect and 
+the team to?...</p>
+<hr/>
 <h5><a href='https://lygos.workable.com/j/EDAA3D067A'>Lygos, Inc. - Jobs: Software Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://csc-generation.workable.com/j/76C13C6213'>CSC Generation - Jobs: Software Engineering Manager - Apply online</a></h5> 
+<h5><a href='https://csc-generation.workable.com/j/76C13C6213'>CSC Generation - Jobs: Software Engineering Manager - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -364,7 +379,7 @@ Developer ? Sr. Software Engineer ? Senior Web Developer?...</p>
 <p><span class="badge badge-light">Toronto Canada</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/nasuni/job/oKHCafwX'> Nasuni Careers - Software Engineering Manager Datapath Performance- Marlborough</a></h5> 
+<h5><a href='https://jobs.jobvite.com/nasuni/job/oKHCafwX'> Nasuni Careers - Software Engineering Manager Datapath Performance- Marlborough</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -392,7 +407,7 @@ Developer ? Sr. Software Engineer ? Senior Web Developer?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/centralway/job/odit8fwQ'>Numbrs Personal Finance AG Careers - Software Engineer, Backend - Remote</a></h5> 
+<h5><a href='https://jobs.jobvite.com/centralway/job/odit8fwQ'>Numbrs Personal Finance AG Careers - Software Engineer, Backend - Remote</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -416,7 +431,7 @@ Developer ? Sr. Software Engineer ? Senior Web Developer?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ecosia.workable.com/j/8A3F2C1BFB'>Ecosia - Jobs: Senior Software Developer: Frontend focus - Apply online</a></h5> 
+<h5><a href='https://ecosia.workable.com/j/8A3F2C1BFB'>Ecosia - Jobs: Senior Software Developer: Frontend focus - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -424,7 +439,7 @@ Developer ? Sr. Software Engineer ? Senior Web Developer?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://adheretech.applytojob.com/apply/g19iyKU858/Senior-Software-Engineer'>Senior Software Engineer - AdhereTech - Career Page</a></h5> 
+<h5><a href='http://adheretech.applytojob.com/apply/g19iyKU858/Senior-Software-Engineer'>Senior Software Engineer - AdhereTech - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -438,18 +453,6 @@ Developer ? Sr. Software Engineer ? Senior Web Developer?...</p>
 <hr/>
 <h5><a href='https://jobs.lever.co/draftkings/7a54fc97-2fc5-4b4a-8339-638a7f7235e2'>DraftKings - Senior Lead Software Engineer, Sportsbook</a></h5> 
 <p><span class="badge badge-light">Boston, MA</span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/magnitude/job/orwBafws'>Magnitude Software Careers - Senior C++ &amp; Go Software Developer</a></h5> 
-<p><span class="badge badge-light">Vancouver</span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/magnitude/job/oywBafwz'>Magnitude Software Careers - C++ Software Developer</a></h5> 
-<p><span class="badge badge-light">Vancouver</span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/acloudguru/jobs/4369890002'>Job Application for Junior Software Developer at A Cloud Guru</a></h5> 
-<p><span class="badge badge-light">Melbourne</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
 
