--- a/deep-learning.html
+++ b/deep-learning.html
@@ -47,11 +47,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://crisalix.workable.com/j/2F72BBA2CC'>Crisalix - Jobs: Senior iOS App Developer + Deep Learning Experience - relocation to Barcelona - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://crisalix.workable.com/j/2F72BBA2CC'>Crisalix - Jobs: Senior iOS App Developer + Deep Learning Experience - relocation to Barcelona - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/samsungresearchamericainternship/jobs/4284633002'>Job Application for  Research Intern for Deep Reinforcement Learning at Samsung Research America Internship</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/samsungresearchamericainternship/jobs/4284633002'>Job Application for  Research Intern for Deep Reinforcement Learning at Samsung Research America Internship</a></h5> 
 <p><span class="badge badge-light">Montreal, Canada</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -77,7 +77,7 @@
 Vision / Computational geometry. GIT version control (good knowledge). English
 ?...</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Netatmo/743999691950514-internship-deep-learning-and-ai-research'>Netatmo INTERNSHIP - Deep Learning and AI Research | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Netatmo/743999691950514-internship-deep-learning-and-ai-research'>Netatmo INTERNSHIP - Deep Learning and AI Research | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -117,7 +117,7 @@ Vision / Computational geometry. GIT version control (good knowledge). English
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/forethought/0130b5ac-597a-4f57-99a9-a9a8d6a108ae'>Forethought - ML Engineer, Deep Learning &amp; NLP</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/forethought/0130b5ac-597a-4f57-99a9-a9a8d6a108ae'>Forethought - ML Engineer, Deep Learning &amp; NLP</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
@@ -131,12 +131,12 @@ Vision / Computational geometry. GIT version control (good knowledge). English
 <p><span class="badge badge-light">Amsterdam Amsterdam</span></p>
 <p>Posted on: 2019-07-08</p>
 <hr/>
-<h5><a href='https://nvidia.wd5.myworkdayjobs.com/en-US/UniversityJobs/job/US-CA-Santa-Clara/Deep-Learning-Engineer---WWFO_JR1923118'>Deep Learning Engineer - WWFO</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://nvidia.wd5.myworkdayjobs.com/en-US/UniversityJobs/job/US-CA-Santa-Clara/Deep-Learning-Engineer---WWFO_JR1923118'>Deep Learning Engineer - WWFO</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... ... artificial intelligence and self-driving cars. Learn more about NVIDIA. Solutions 
 Architect - WWFO | US, CA, Santa Clara ? Solution Architect - WWFO | US, CA,?...</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999691132277-thesis-in-the-field-of-deep-learning-for-autonomous-driving'>Bosch Group Thesis in the field of Deep Learning for Autonomous Driving | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999691132277-thesis-in-the-field-of-deep-learning-for-autonomous-driving'>Bosch Group Thesis in the field of Deep Learning for Autonomous Driving | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-03</p>
 <hr/>
@@ -165,7 +165,7 @@ Learning team. Academic and commercial groups around the world are using?...</p>
 <p><span class="badge badge-light">San Diego California</span></p>
 <p>Posted on: 2019-06-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/samsungssi/job/oM5D9fwn'>Samsung Semiconductor, Inc. Careers - Advanced Systems Lab - Sr. Deep Learning Research Scientist</a></h5> 
+<h5><a href='http://jobs.jobvite.com/samsungssi/job/oM5D9fwn'>Samsung Semiconductor, Inc. Careers - Advanced Systems Lab - Sr. Deep Learning Research Scientist</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-06-29</p>
 <hr/>
@@ -181,7 +181,7 @@ Learning team. Academic and commercial groups around the world are using?...</p>
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-06-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://eygbl.referrals.selectminds.com/jobs/senior-ai-scientist-deep-learning-86705'>Senior AI Scientist - Deep Learning - EY Careers</a></h5> 
+<h5><a href='https://eygbl.referrals.selectminds.com/jobs/senior-ai-scientist-deep-learning-86705'>Senior AI Scientist - Deep Learning - EY Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... Job Summary: Reporting to the AI Science Leader the responsibility of this 
 position is to create products or tools built on Artificial Intelligence...</p>
@@ -202,7 +202,7 @@ position is to create products or tools built on Artificial Intelligence...</p>
 <p><span class="badge badge-light">Mountain View, CA</span></p>
 <p>Posted on: 2019-06-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://salesforce.wd1.myworkdayjobs.com/en-US/External_Career_Site/job/California---Palo-Alto/Summer-2019-Intern---Deep-Learning-Research_JR20931'>2019 Intern - Deep Learning Research</a></h5> 
+<h5><a href='https://salesforce.wd1.myworkdayjobs.com/en-US/External_Career_Site/job/California---Palo-Alto/Summer-2019-Intern---Deep-Learning-Research_JR20931'>2019 Intern - Deep Learning Research</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>15 hours ago ... deep learning, - machine learning, - natural language processing, - computer 
 vision, or - reinforcement learning. Applied to, for example: text categorization, 
@@ -220,7 +220,7 @@ text?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-20</p>
 <hr/>
-<h5><a href='https://avvir.workable.com/j/95479207A5'>Avvir - Jobs: Computer Vision/Deep Learning Engineer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://avvir.workable.com/j/95479207A5'>Avvir - Jobs: Computer Vision/Deep Learning Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light">New York, United States</span></p>
 <p>Posted on: 2019-06-17</p>
 <hr/>
@@ -257,7 +257,7 @@ daytime?...</p>
 <p><span class="badge badge-light">Palo Alto</span></p>
 <p>Posted on: 2019-06-09</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/a/jobs/1726087'>Job Application for Sr. Software Engineer, Deep Learning Infrastructure at A? by Airbus</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/a/jobs/1726087'>Job Application for Sr. Software Engineer, Deep Learning Infrastructure at A? by Airbus</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-08</p>
 <hr/>
@@ -423,7 +423,7 @@ Project?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-29</p>
 <hr/>
-<h5><a href='https://www.datarobot.com/careers/job/1615732/'>Deep Learning Engineer, Core Modeling in Columbus | Open position | DataRobot</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.datarobot.com/careers/job/1615732/'>Deep Learning Engineer, Core Modeling in Columbus | Open position | DataRobot</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-29</p>
 <hr/>
