--- a/project-manager.html
+++ b/project-manager.html
@@ -40,6 +40,50 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.jobvite.com/arc/job/oGuBafwF'>ARC Document Solutions Careers - Print Project Manager</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-25</p>
+<hr/>
+<h5><a href='https://boards.greenhouse.io/generalassembly/jobs/1793761'>Job Application for Technical Project Manager at General Assembly</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-25</p>
+<hr/>
+<h5><a href='https://kimmel-associates.breezy.hr/p/ede649480d42-project-manager'>Project Manager</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-25</p>
+<hr/>
+<h5><a href='https://kimmel-associates.breezy.hr/p/20cf93e51b91-assistant-project-manager'>Assistant Project Manager</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-25</p>
+<hr/>
+<h5><a href='https://kimmel-associates.breezy.hr/p/5385cbe88fa3-assistant-project-manager'>Assistant Project Manager</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-25</p>
+<hr/>
+<h5><a href='https://kimmel-associates.breezy.hr/p/66c473616a61-assistant-project-manager'>Assistant Project Manager</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-25</p>
+<hr/>
+<h5><a href='https://kimmel-associates.breezy.hr/p/f6462bb6e6cb-assistant-project-manager'>Assistant Project Manager</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-25</p>
+<hr/>
+<h5><a href='https://kimmel-associates.breezy.hr/p/31321678a275-project-manager-utility-solar--pv--engineering-project-manager'>Project Manager - Utility Solar - PV (Engineering Project Manager)</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-25</p>
+<hr/>
+<h5><a href='https://kimmel-associates.breezy.hr/p/6d7d25ed9bb4-project-manager-utility-solar--pv--engineering-project-manager'>Project Manager - Utility Solar - PV (Engineering Project Manager)</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-25</p>
+<hr/>
+<h5><a href='https://kimmel-associates.breezy.hr/p/fabd6dced9c2-project-manager-utility-solar--pv--engineering-project-manager'>Project Manager - Utility Solar - PV (Engineering Project Manager)</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-25</p>
+<hr/>
+<h5><a href='https://kimmel-associates.breezy.hr/p/91d0e91f2ff0-project-manager-construction-manager--heavy-industrial--direct-hire--lump-sum-construction'>Project Manager / Construction Manager - Heavy Industrial (Direct Hire, Lump Sum Construction)</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-25</p>
+<hr/>
 <h5><a href='https://jobs.jobvite.com/quantum-health/job/oQACafwW'>Quantum Health Careers - Project Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
@@ -72,7 +116,7 @@
 <p><span class="badge badge-light">Washington, United States</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://shijigroup.join.com/jobs/251716-product-program-manager-m-f'>Job @ Shiji (Berlin): Product Program Manager (m/f) | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://shijigroup.join.com/jobs/251716-product-program-manager-m-f'>Job @ Shiji (Berlin): Product Program Manager (m/f) | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -160,7 +204,7 @@
 <p><span class="badge badge-light">England, United Kingdom</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://oyorooms.recruiterbox.com/jobs/fk03fl3/'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://oyorooms.recruiterbox.com/jobs/fk03fl3/'>
     Construction Project Manager - North at OYO
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -257,7 +301,7 @@ in roofing, waterproofing & restoration with a project portfolio consisting of?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/sundial/job/4azfingssxfwcsdx8pthen8x5e'>Project Manager 2 (16125) | Sundial Software Career Opportunities</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/sundial/job/4azfingssxfwcsdx8pthen8x5e'>Project Manager 2 (16125) | Sundial Software Career Opportunities</a></h5> 
 <p><span class="badge badge-light">Madison, WI</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -363,11 +407,11 @@ new program management office to support the NIH. On our team, you'll monitor?..
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Ubisoft2/743999692222779-senior-agile-project-manager'>Ubisoft Senior Agile Project Manager | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Ubisoft2/743999692222779-senior-agile-project-manager'>Ubisoft Senior Agile Project Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Kyiv, Ukraine</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BIC/743999692221298-it-senior-project-manager-supply-chain'>BIC IT Senior Project Manager ? Supply Chain | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BIC/743999692221298-it-senior-project-manager-supply-chain'>BIC IT Senior Project Manager ? Supply Chain | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -399,7 +443,7 @@ new program management office to support the NIH. On our team, you'll monitor?..
 <p><span class="badge badge-light">Lisbon, Portugal</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://definedcrowd.recruitee.com/o/dutchgerman-linguistics-project-manager'>
+<h5><a href='https://definedcrowd.recruitee.com/o/dutchgerman-linguistics-project-manager'>
       Dutch/German Linguistics Project Manager - DefinedCrowd
     </a></h5> 
 <p><span class="badge badge-light">Lisbon, Portugal</span></p>
@@ -450,50 +494,6 @@ in?...</p>
 <hr/>
 <h5><a href='https://jobs.lever.co/csenergy/113463d9-8f08-4df6-a0b6-42c89a8796ee'>CS Energy - Project Manager - MA</a></h5> 
 <p><span class="badge badge-light">Worcester</span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/csenergy/3dcc17c8-b793-4070-b697-9bb5aef52913'>CS Energy - Assistant Project Manager - NJ</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/csenergy/416e1b8b-88cb-40d3-a169-daece57eaee2'>CS Energy - Assistant Project Manager - NY</a></h5> 
-<p><span class="badge badge-light">Albany, NY</span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/csenergy/4a362a90-36ec-49fc-8ebe-3a11cc7f71e1'>CS Energy - Assistant Project Manager - MA</a></h5> 
-<p><span class="badge badge-light">Worcester</span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/csenergy/786c5358-12d4-4bb1-aa5f-3d6fa8248f79'>CS Energy - Project Manager - NY</a></h5> 
-<p><span class="badge badge-light">Albany, NY</span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/csenergy/d88c0e47-72a0-4688-8aec-ff59953d9eb6'>CS Energy - Project Manager - NJ</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-<h5><a href='https://talent-acquisition-concepts.breezy.hr/p/9d2a7bd9c357-municipal-project-manager'>Municipal Project Manager at Talent Acquisition Concepts</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-<h5><a href='https://talent-acquisition-concepts.breezy.hr/p/a3ac18ef94cf-civil-site-project-manager'>Civil/Site Project Manager at Talent Acquisition Concepts</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Netcentric/743999692075857-junior-project-manager-m-f-x-'>Netcentric Junior Project Manager (m/f/x) | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-<h5><a href='https://talent-acquisition-concepts.breezy.hr/p/08dd6f21aef7-construction-project-manager'>Construction Project Manager at Talent Acquisition Concepts</a></h5> 
-<p><span class="badge badge-light">Tampa, FL</span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-<h5><a href='https://talent-acquisition-concepts.breezy.hr/p/9436800540fa-geotechnical-project-manager'>Geotechnical Project Manager at Talent Acquisition Concepts</a></h5> 
-<p><span class="badge badge-light">Charlotte, NC</span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-<h5><a href='https://talent-acquisition-concepts.breezy.hr/p/9831177f3cda-construction-project-manager'>Construction Project Manager at Talent Acquisition Concepts</a></h5> 
-<p><span class="badge badge-light">Miami, FL</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
 
